# blog-actix

./: Cargo.toml  users.db
migrations/2023-03-07-110650_create_posts/: up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs
src/models/: comment_action.rs  post_action.rs  user_action.rs
src/routes/: comments.rs  posts.rs  users.rs
