[package]
name = "blog-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
env_logger = "0.10.0"
serde = { version="1.0.152", features = ["derive"] }
serde_json = "1.0.93"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15.6"
futures = "0.3.26"